# particle-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  DesignLanguage.md  README.md  run.sh  setup.sh
src/: main.cpp
src/engine/: Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
src/interfaces/: IScene.hpp
src/lib/: BinaryPositionEncoder.cpp  BinaryPositionEncoder.hpp  RectArea.hpp  Vector2M.hpp
src/utils/: Helpers.hpp  Timer.cpp  Timer.hpp
